app/assets/stylesheets/application.scss
$dark-pink: #ffaaa5;
$light-pink: #ff8b94;
$white: #ffffff;
$shadow-grey: #dddddd;
$black: #111111;
$light-green: #dcedc1;
$dark-green: #a8e6cf;
$peach: #ffd3b6;
$charcoal: #323232;
$ivory: #FDF9F3;
$jam: #FF6666;

body {
  margin: 0;
  background: $dark-pink;
}

.main-page {
  margin-left: 50px;
  margin-right: 50px;
  background: $peach;
  box-shadow: 0 -1px 10px 2px $black;
  padding-bottom: 70px;
  border-radius: 10px;
  text-align: center;
}

.loginnav {
  display: inline-block;
  float: right;
  background: $dark-pink;
  padding: 20px;
  width: 25%;
  z-index: 99;
  border-radius: 8px;
  margin-right: 20px;
}

.top-bar {
  background: $light-pink;
  box-shadow: 0 -1px 10px 2px $black;
  float: left;
  width: 100%;
  z-index: 1;
  margin-bottom: 20px;
}

.name {
  color: $white;
  display: inline-block;
  font-family: 'Pacifico', cursive;
  font-size: 40px;
  font-weight: lighter;
  letter-spacing: 2px;
  padding-left: 50px;
  text-shadow: 1px 1px 1px $black, 5px 5px 1px $jam;
}

.login-name {
  background: $light-pink;
  display: inline-block;
  float: right;
  margin: 50px;
}

.field {
  color: $black;
  display: inline-block;
  font-family: Arial;
  font-weight: bold;
  letter-spacing: 1px;
  padding: 10px;
}

.signup-form {
  background: $dark-pink;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  display: inline-block;
  float: right;
  margin-right: 20px;
  margin-top: 140px;
  padding: 20px;
  text-align: center;
  width: 10%;
}

.image-cropper {
  border: 5px solid $white;
  border-radius: 50%;
  box-shadow: 5px 5px 5px $black;
  height: 100px;
  overflow: hidden;
  position: relative;
  width: 100px;
}

img {
  display: inline;
  height: 100%;
  margin: 0 auto;
  width: auto;
}

.search-bar {
  text-align: center;
  background-color: $light-green;
  padding:20px;
}

.search-form {
  width: 40%;
  height: 30px;
  font-size: 20px;
  padding: 5px;
  font-family: 'Hind', sans-serif;
}

.search-button {
  width: 100px;
  font-size: 18px;
  font-family: 'Hind', sans-serif;
  background: $dark-green;
  color: $white;
  border-radius: 5px;
  text-align: center;
  padding:5px;
  text-shadow: .5px .5px .5px $black;
}

.search-button:hover {
  background-color: darken($dark-green, 10%);
}

.locations-title {
  text-align: center;
  background: $white;
  color: $dark-pink;
  padding: 10px;
  font-family: 'Hind', sans-serif;
  margin: 0px;
}

ul {
  columns: 2;
  text-align: center;
  margin: 5px;
}

.location-box {
  background: white;
  margin: 5px;
  padding: 10px;
  width: 80%;
  font-family: 'Hind', sans-serif;
  display: inline-block;
  border-radius: 10px;
  box-shadow: .5px .5px .5px $black;
}

.location-box:hover {
  background: lighten($peach, 10%);
}

.location-box:active {
  background: lighten($charcoal, 70%);
}

a {
  color: $charcoal;
}

a:visited {
  color: darken($dark-pink, 5%);
}

.location-image {
  float: left;
  margin-top: 10px;
  margin-left: 10px;
}

.location-header {
  background: $light-green;
  height: 650px;
}

.location-name {
  color: $white;
  background-color: $dark-green;
  margin:0;
  font-size: 60px;
  text-align: center;
  font-family: 'Hind', sans-serif;
  text-shadow: .5px .5px .5px $black;
}

.location-show-image {
  float: left;
  margin: 20px;
  margin-left: 50px;
}

.location-show-address {
  float: right;
  padding: 5px;
  margin-right: 5%;
  width: 500px;
  font-family: 'Hind', sans-serif;
  font-size: 20px;
  text-align: right;
}

.image-actual {
  width: 150px;
}

.top-list {
  font-family: 'Hind', sans-serif;
  font-size: 30px;
  color: $light-pink;
}

.review-object {
  background: $ivory;
  margin-left: 60px;
  margin-right: 60px;
  padding: 20px;
  border-radius: 10px;
  border: 2px solid $charcoal;
  font-family: 'Hind', sans-serif;
}

.user-image {
  float: left;
  margin: 30px;
}

.review-stats {
  text-align: right;
  margin-top: 0;
}

.review-object-title {
  font-size: 18px;
}

.review-body {
  margin: 5px;
  text-align: left;
}

.js-upvote {
  margin-right: 10px;
  margin-bottom: 0;
}

.removed {
  color: $shadow-grey;
  margin-left: 20px;
}

.downvoted {
  color: darken($shadow-grey, 50%);
  margin-left: 20px;
}

.add-image-link {
  color: $black;
  font-size: 16px;
}

.add-image-link:visited {
  color: black;
}

.added {
  color: $dark-pink;
  margin-left: 20px;
}

.new_user {
  width: 40%;
  margin-top: 60px;
  text-align: center;
  display: inline-block;
  margin-left: auto;
  margin-right: auto;
  float:none;
  background-color: $ivory;
  padding: 50px;
  border-radius: 10px;
}

// .main-page.large-8.columns {
//   text-align: center;
//   height: 100px;
// }

.back-link {
  text-align: center;
  color: $charcoal;
  font-size: 20px;
  font-family: 'Hind', sans-serif;
}

.nav-box {
  font-family: 'Hind', sans-serif;
  font-size: 20px;
}

.top-padded {
  padding-top: 30px;
}

.log-in-link {
  color: $charcoal;
}

#user_email {
  height: 20px;
  width: 300px;
  margin: 10px;
  font-family: 'Hind', sans-serif;
}

#user_password {
  height: 20px;
  width: 300px;
  margin: 10px;
}

#user_password_confirmation {
  height: 20px;
  width: 300px;
  margin: 10px;
}

.no-top-padding {
  padding-top: 0px;
  margin-top: 0px;
}

.flash-container {
  text-align: center;
  background: $jam;
  font-family: 'Hind', sans-serif;
  font-size: 20px;
  padding: 20px;
  margin-bottom: 20px;
}

.user-info {
  display: inline-block;
  float: right;
  font-family: 'Hind', sans-serif;
  font-size: 14px;
  text-align: right;
}

.user-buttons {
  display: inline-block;
}

